k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-service
  labels:
    app: grpc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grpc-service
    spec:
      containers:
        - name: grpc-service
          image: ghcr.io/aasmc/grpc-example:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1002
            runAsGroup: 1000
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: 125m
              memory: 512Mi
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - grpc-service
              topologyKey: "kubernetes.io/hostname"
