k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  labels:
    app: grpc-service
spec:
  type: ClusterIP
  selector:
    app: grpc-service
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: grpc-9090
